# biotite

./: Cargo.toml  LICENSE  LICENSE-MIT  README.md  reference.md  spec_qsort.ll  utilities.c
examples/: reference.ll  test  test.c  test.cpp  test.dump  test.ll
examples/profile/: profile.txt  reference  reference.ll  reference.s  test  test.c  test.dump  test.ll  test.s
examples/syscall/: test.c  test.ll
src/: cfg.rs  cfg_builder.rs  cfg_translator.rs  decls.ll  ir_rewriter.rs  ir_translator.rs  lib.rs  llvm_isa.rs  llvm_macro.rs  llvm_parser.rs  llvm_serializer.rs  llvm_translator.rs  main.rs  mem.rs  opt.rs  optimization.rs  opts.rs  riscv_interpreter.rs  riscv_isa.rs  riscv_macro.rs  riscv_parser.rs  static_decls_defs.ll  sys_call.rs  syscall.rs  syscall_builder.rs  syscall_x86_64.rs  syscalls.rs  system_call.ll  system_call.rs
src func example/: lzma_decoder.ll  lzma_encoder.ll
src func example/xz src/: lzma_decoder.ll  lzma_encoder.ll  sysdefs.h
src/mem/: x86_64.ld  x86_64.s
src/opt/: block_cloning.rs  block_duplication.rs  cached_base_ptrs.rs  immut_gp.rs  jump_localization.rs  native_branches.rs  native_direct_jumps.rs  native_mem_utils.rs  native_stack_vars.rs  native_stk_vars.rs  stack_regs.rs  stk_regs.rs
src/optimization/: block_cloning.rs  cached_base_ptrs.rs  direct_branches.rs  direct_jumps.rs  global2stack.rs  immut_gp.rs  longjmp_except.rs  (+11 more)
tests/: cfg_builder_test_input.c  cfg_builder_test_input.dump  ilp32.ref.ll  ilp32d.ref.ll  ilp32f.ref.ll  lp64.ref.ll  lp64d.ref.ll  lp64f.ref.ll  riscv_parser_test_input.c  riscv_parser_test_input.dump
(+28 files in other folders)
