[package]
name = "riscv2llvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
once_cell = "1.16.0"
rayon = "1.6.1"
regex = "1.7.0"
